--- a/index.html
+++ b/index.html
@@ -5,6 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="fonts/fonts.css" href="styles/global.css" href="styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+<nav class="header_menu">
+  <ul class="header_menu-list">
+    <li class="header_menu-item header_menu-item_active">
+      <a class="header_menu-link">главая</a>
+    </li>
+    <li class="header_menu-item">
+      <a class="header_menu-link" href="#0">посмотреть лоты</a>
+      <li class="header_menu-item">
+        <a class="header_menu-link" href="#0">об аукционе</a>
+  </ul>
+<a class ="header_logo">
+  <img
+  class="header_logo-img"
+  src="./images/logo-black.svg"
+  alt="логотип оно тебе надо"
+  />
+</a>
+<address class="address">
+  <div class ="header_contacts">
+    <a href="tel:+9 999 555 5555"></a>
+    <a href=" info@sobaka.ge"></a>
+    <p> наб. Принсенграхт 263- 265, Амстердам</p>
+  </div>
+ </address>
+    </header>
+<main>
+  <section class="cover">
+      <h1></h1>
+      <div class="discription_block"></div>
+      <div class="discription_block">
+        <p></p>
+    <bottom class="bottom"></bottom>
+      </div>
+    </cover>
+  </section>
+
+<section class="lots">
+  <h2>ЛОТЫ</h2>
+  <ul class="card">
+    <li class="card-lot-1">
+      <a><article></article></a>
+    </li>
+    <li class="card-lot-2">
+      <a> <article></article></a>
+    </li>
+    <li class="card-lot-3">
+      <a><article></article></a>
+    </li>
+  </ul>
+  <a></a>
+</section>
+
+<section class="about">
+  <h2>ОБ АУКЦИОНЕ</h2>
+  <div class="container"></div>
+  <div class="container">
+    <h3></h3>
+    <p></p>
+  </div>
+</section>
+</main>
+
+  <footer class="footer">
+<address></address>
+<nav class="menu"></nav>
+<ul class="social media">
+  <li class="social media">
+    <a class="social media" href=""></a>
+  </li>
+  <li class="social media">
+    <a class="social media" href=""></a>
+  </li>
+  <li class="social media">
+    <a class="social media" href=""></a>
+  </li>
+</ul>
+  </footer>
+  </body>
 </html>
