--- a/index.html
+++ b/index.html
@@ -12,35 +12,45 @@
 <nav class="header_menu">
   <ul class="header_menu-list">
     <li class="header_menu-item header_menu-item_active">
-      <a class="header_menu-link">главая</a>
+      <a class="header_menu-link">главная</a>
     </li>
     <li class="header_menu-item">
       <a class="header_menu-link" href="#0">посмотреть лоты</a>
       <li class="header_menu-item">
         <a class="header_menu-link" href="#0">об аукционе</a>
   </ul>
+</nav>
+<div class="container_header_logo">
 <a class ="header_logo">
   <img
   class="header_logo-img"
   src="./images/logo-black.svg"
-  alt="логотип оно тебе надо"
-  />
+  alt="логотип оно тебе надо">
 </a>
-<address class="address">
-  <div class ="header_contacts">
-    <a href="tel:+9 999 555 5555"></a>
-    <a href=" info@sobaka.ge"></a>
+</div>
+<adress class="adress">
+  <div class ="header_adress">
+    <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+    <br>
+    <a href=" info@sobaka.ge">info@sobaka.ge</a>
+    <br>
     <p> наб. Принсенграхт 263- 265, Амстердам</p>
   </div>
- </address>
-    </header>
-<main>
+ </adress>
+
+</header>
+<main class="main">
   <section class="cover">
-      <h1></h1>
+
+      <h1 class="cover_title">
+        <span class ="accent-span">ОНО</span>
+        <span class ="accent-span text-center">ТЕБЕ</span>
+        <span class="accent-span text-right">НАДО</span>
+      </h1>
       <div class="discription_block"></div>
       <div class="discription_block">
         <p></p>
-    <bottom class="bottom"></bottom>
+    <bottom class="bottom">СДЕЛАТЬ СТАВКУ</bottom>
       </div>
     </cover>
   </section>
@@ -63,28 +73,45 @@
 
 <section class="about">
   <h2>ОБ АУКЦИОНЕ</h2>
-  <div class="container"></div>
-  <div class="container">
-    <h3></h3>
-    <p></p>
+  <div class="container_logo">
+    <a class ="about">
+      <img
+      class="header_logo-img"
+      src="./images/logo-white.svg"
+      alt="логотип оно тебе надо">
+    </a>
+  </div>
+  <div class="container_about">
+    <h3>ОБ АУКЦИОНЕ</h3>
+    <p>
+      Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+      Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+      на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
   </div>
 </section>
 </main>
 
   <footer class="footer">
-<address></address>
-<nav class="menu"></nav>
-<ul class="social media">
-  <li class="social media">
-    <a class="social media" href=""></a>
-  </li>
-  <li class="social media">
-    <a class="social media" href=""></a>
-  </li>
-  <li class="social media">
-    <a class="social media" href=""></a>
-  </li>
-</ul>
+    <adress class="adress">
+      <div class ="footer_adress">
+        <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <br>
+        <a href=" info@sobaka.ge">info@sobaka.ge</a>
+        <br>
+        <p> наб. Принсенграхт 263- 265, Амстердам</p>
+      </div>
+     </adress>
+      <nav class="footer_menu">
+        <ul class="footer_menu-list">
+          <li class="footer_menu-item footer_menu-item_active">
+            <a class="footer_menu-link">главная</a>
+          </li>
+          <li class="footer_menu-item">
+            <a class="footer" href="#0">посмотреть лоты</a>
+            <li class="footer_menu-item">
+              <a class="footer" href="#0">об аукционе</a>
+        </ul>
+      </nav>
   </footer>
   </body>
 </html>
