--- a/index.html
+++ b/index.html
@@ -5,61 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="fonts/fonts.css" href="styles/global.css" href="styles/style.css">
+    <link rel="stylesheet" href="styles/global.css">
+   <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="fonts/fonts.css" >
   </head>
   <body>
     <header class="header">
-<nav class="header_menu">
-  <ul class="header_menu-list">
-    <li class="header_menu-item header_menu-item_active">
-      <a class="header_menu-link">главная</a>
+<nav>
+  <ul class="header_links-list header_menu">
+    <li class="header_links-item header_links-item_no-bullit">
+      <a class="header_link header_link_active">главная</a>
     </li>
-    <li class="header_menu-item">
-      <a class="header_menu-link" href="#0">посмотреть лоты</a>
-      <li class="header_menu-item">
-        <a class="header_menu-link" href="#0">об аукционе</a>
+    <li class="header_links-item">
+      <a class="header_link" href="#0">посмотреть лоты</a>
+    </li>
+      <li class="header_links-item">
+        <a class="header_link" href="#0">об аукционе</a>
+      </li>
   </ul>
 </nav>
-<div class="container_header_logo">
-<a class ="header_logo">
+<div class="header_logo-container">
+  <a class="header_logo">
   <img
-  class="header_logo-img"
+  class="header_logo-image"
   src="./images/logo-black.svg"
   alt="логотип оно тебе надо">
 </a>
 </div>
-<adress class="adress">
-  <div class ="header_adress">
+<address class="address">
+  <div class="header_address">
     <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
     <br>
-    <a href=" info@sobaka.ge">info@sobaka.ge</a>
-    <br>
-    <p> наб. Принсенграхт 263- 265, Амстердам</p>
+    <a href=" info@sobaka.ge">info@sobaka.ge</a><br>
+    <p> наб. Принсенграхт 263- <br>265, Амстердам</p>
   </div>
- </adress>
-
+ </address>
 </header>
 <main class="main">
-  <section class="cover">
-
-      <h1 class="cover_title">
-        <span class ="accent-span">ОНО</span>
-        <span class ="accent-span text-center">ТЕБЕ</span>
-        <span class="accent-span text-right">НАДО</span>
+  <section class ="cover">
+    <div class="overlay">
+    <img
+    class="cover_image"
+    src="./images/cover.jpg"
+    alt="цветы лотоса"
+    />
+  </div>
+<h1 class ="cover_title">
+        <span class ="aligned_text aligned_text_left">ОНО</span>
+        <span class ="aligned_text aligned_text_center no-letter-spacing">ТЕБЕ</span>
+        <span class="aligned_text aligned_text_right no-letter-spacing">НАДО</span>
       </h1>
-      <div class="discription_block"></div>
-      <div class="discription_block">
-        <p></p>
-    <bottom class="bottom">СДЕЛАТЬ СТАВКУ</bottom>
+      <div class="cover_discription">
+      <p class="discription_text">
+        Аукцион вещей, в которые никто не верил
+      </p>
+      <button class="bet_botton">СДЕЛАТЬ СТАВКУ</botton>
       </div>
-    </cover>
+
   </section>
 
 <section class="lots">
-  <h2>ЛОТЫ</h2>
-  <ul class="card">
-    <li class="card-lot-1">
-      <a><article></article></a>
+  <h2 class="lots_heading">ЛОТЫ</h2>
+  <ul class="lots_card-list">
+    <li class="lots_card-list-item">
+      <a class="card_link"></a>
     </li>
     <li class="card-lot-2">
       <a> <article></article></a>
@@ -72,46 +81,79 @@
 </section>
 
 <section class="about">
-  <h2>ОБ АУКЦИОНЕ</h2>
-  <div class="container_logo">
-    <a class ="about">
+  <div class="logo_about-column">
+  <div class="about_logo-container">
+    <a class ="about_logo">
       <img
-      class="header_logo-img"
+      class="about_logo-image"
       src="./images/logo-white.svg"
       alt="логотип оно тебе надо">
     </a>
   </div>
-  <div class="container_about">
-    <h3>ОБ АУКЦИОНЕ</h3>
-    <p>
+  </div>
+  <div class="text_about-column">
+  <div class="about_text">
+    <h2>ОБ АУКЦИОНЕ</h2>
+    <p class="about_first-paragraph">
       Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
-      Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-      на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+    </p>
+      <p c>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+      на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+    </p>
+  </div>
   </div>
 </section>
 </main>
 
   <footer class="footer">
-    <adress class="adress">
-      <div class ="footer_adress">
-        <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
-        <br>
-        <a href=" info@sobaka.ge">info@sobaka.ge</a>
-        <br>
-        <p> наб. Принсенграхт 263- 265, Амстердам</p>
-      </div>
-     </adress>
-      <nav class="footer_menu">
-        <ul class="footer_menu-list">
-          <li class="footer_menu-item footer_menu-item_active">
-            <a class="footer_menu-link">главная</a>
+      <address class="address">
+        <div class="footer_address">
+          <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <br>
+          <a href=" info@sobaka.ge">info@sobaka.ge</a><br>
+          <p> наб. Принсенграхт 263- <br>265, Амстердам</p>
+        </div>
+       </address>
+       <nav>
+        <ul class="footer_links-list footer_menu">
+          <li class="footer_links-item footer_links-item_no-bullit">
+            <a class="footer_link footer_link_active">главная</a>
           </li>
-          <li class="footer_menu-item">
-            <a class="footer" href="#0">посмотреть лоты</a>
-            <li class="footer_menu-item">
-              <a class="footer" href="#0">об аукционе</a>
+          <li class="footer_links-item_no-bullit">
+            <a class="footer_link" href="#0">посмотреть лоты</a>
+          </li>
+            <li class="footer_links-item_no-bullit">
+              <a class="footer_link" href="#0">об аукционе</a>
+            </li>
         </ul>
       </nav>
+      <div class="footer_social">
+        <div class="footer_social-container">
+        <ul class="footer_social-list">
+          <li class="footer_social-list-item_no_bullit">
+            <a class="footer_social-link" href="https://www.youtube.com/">
+              <img class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="лого ютуб">
+            </a>
+          </li>
+          <li class="footer_social-list-item_no_bullit">
+            <a class="footer_social-link" href="https://vk.com/">
+              <img class="footer_social-icon" 
+              src="./images/vk.svg"
+              alt="лого вк">
+            </a>
+          </li>
+            <li class="footer_social-list-item_no_bullit">
+              <a class="footer_social-link" href="https://pinterest.com/">
+                <img class="footer_social-icon"
+                src="./images/pinterest.svg"
+                alt="лого пинтерест">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
   </footer>
   </body>
 </html>
