--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="fonts/fonts.css" >
   </head>
+
   <body>
     <header class="header">
 <nav>
@@ -17,10 +18,10 @@
       <a class="header_link header_link_active">главная</a>
     </li>
     <li class="header_links-item">
-      <a class="header_link" href="#0">посмотреть лоты</a>
+      <a class="header_link" href="#lots">посмотреть лоты</a>
     </li>
       <li class="header_links-item">
-        <a class="header_link" href="#0">об аукционе</a>
+        <a class="header_link" href="#about">об аукционе</a>
       </li>
   </ul>
 </nav>
@@ -41,46 +42,59 @@
   </div>
  </address>
 </header>
+
 <main class="main">
-  <section class ="cover">
-    <div class="overlay">
-    <img
-    class="cover_image"
-    src="./images/cover.jpg"
-    alt="цветы лотоса"
-    />
-  </div>
-<h1 class ="cover_title">
-        <span class ="aligned_text aligned_text_left">ОНО</span>
-        <span class ="aligned_text aligned_text_center no-letter-spacing">ТЕБЕ</span>
-        <span class="aligned_text aligned_text_right no-letter-spacing">НАДО</span>
-      </h1>
-      <div class="cover_discription">
-      <p class="discription_text">
-        Аукцион вещей, в которые никто не верил
-      </p>
+ 
+  <section class="cover">
+    <div class="overlay"></div>
+      <h1 class="cover_title">
+    <span class="aligned_text aligned_text_left">О<span class="letter_spacing-extended">НО</span></span>
+    <span class="aligned_text aligned_text_center">ТЕ<span class="letter_spacing-extended">БЕ</span></span>
+    <span class="aligned_text aligned_text_right"><span class="letter_spacing-extended">Н</span>АД<span class="no-letter-spacing">О</span></span>
+    </h1>
+     <div class="cover_discription">
+      <p class="discription_text">Аукцион вещей, в которые никто не верил
+      </p> 
       <button class="bet_botton">СДЕЛАТЬ СТАВКУ</botton>
-      </div>
+      </div> 
+</section>
 
-  </section>
-
-<section class="lots">
+<section id="lots" class="lots">
   <h2 class="lots_heading">ЛОТЫ</h2>
   <ul class="lots_card-list">
     <li class="lots_card-list-item">
-      <a class="card_link"></a>
+      <a class="card_link" href="#0">
+        <article class="card card_type_film">
+        <div class="overlay"></div>
+        <h3 class="card_title">Фильм режиссёра, который бросил киношколу</h3>
+        <p class="card_text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+       </article>
+      </a>
     </li>
-    <li class="card-lot-2">
-      <a> <article></article></a>
+    <li class="lots_card-list-item">
+      <a class="card_link" href="#0">
+        <article class="card card_type_book">
+          <div class="overlay"></div>
+        <h3 class="card_title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+      <p class="card_text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+          </article>
+      </a>
     </li>
-    <li class="card-lot-3">
-      <a><article></article></a>
+     <li class="lots_card-list-item">
+      <a class="card_link" href="#0">
+        <article class="card card_type_picture">
+          <div class="overlay"></div>
+      <h3 class="card_title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+      <p class="card_text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+     </article>
+      </a>
     </li>
   </ul>
-  <a></a>
+  <a class="lots_link" href="#0">посмотреть больше</a>
 </section>
 
-<section class="about">
+
+<section id="about" class="about">
   <div class="logo_about-column">
   <div class="about_logo-container">
     <a class ="about_logo">
@@ -93,13 +107,24 @@
   </div>
   <div class="text_about-column">
   <div class="about_text">
-    <h2>ОБ АУКЦИОНЕ</h2>
-    <p class="about_first-paragraph">
-      Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+    <h2 class="about_title">ОБ АУКЦИОНЕ</h2>
+    <div class="about_paragraph first_paragraph">
+      <p>Здесь вы не встретите очередное пафосное собрание невероятно </p>
+      <p>дорогого антиквариата. Наши лоты вообще не должны были попасть</p>
+      <p>ни на один аукцион. Потому что кому нужен дневник девочки-</p>
+      <p>подростка или картина, которую может нарисовать даже ребёнок?</p>
+      <p> Кому нужны все эти странные вещи, созданные любителями?
     </p>
-      <p c>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-      на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
-    </p>
+  </div>
+      <div class="about_paragraph">
+        <p>Слишком сложные или, наоборот, слишком простые. Опережающие</p>
+         <p>своё время. В пух и прах растерзанные критиками. Непринятые и</p>
+          <p>непонятые. Когда-то они казались просто неудачными. Но, несмотря</p>
+      <p>на критику, кажущуюся простоту или сложность, сейчас без этих лотов</p>
+      <p> невозможно представить современную культуру. Когда в эти вещи не</p>
+      <p>верил никто, продолжали верить их создатели. И сейчас эти лоты</p>
+      <p>стали культовыми.</p> 
+    </div>
   </div>
   </div>
 </section>
@@ -120,16 +145,16 @@
             <a class="footer_link footer_link_active">главная</a>
           </li>
           <li class="footer_links-item_no-bullit">
-            <a class="footer_link" href="#0">посмотреть лоты</a>
+            <a class="footer_link" href="#lots">посмотреть лоты</a>
           </li>
             <li class="footer_links-item_no-bullit">
-              <a class="footer_link" href="#0">об аукционе</a>
+              <a class="footer_link" href="#about">об аукционе</a>
             </li>
         </ul>
       </nav>
       <div class="footer_social">
-        <div class="footer_social-container">
-        <ul class="footer_social-list">
+       <!-- <div class="footer_social-container">-->
+        <ul class="footer_social-list footer_social">
           <li class="footer_social-list-item_no_bullit">
             <a class="footer_social-link" href="https://www.youtube.com/">
               <img class="footer__social-icon"
@@ -152,7 +177,7 @@
               </a>
             </li>
           </ul>
-        </div>
+       <!--</div> -->
       </div>
   </footer>
   </body>
