--- a/index.html
+++ b/index.html
@@ -13,33 +13,28 @@
   <body>
     <header class="header">
 <nav>
-  <ul class="header_links-list header_menu">
-    <li class="header_links-item header_links-item_no-bullit">
-      <a class="header_link header_link_active">главная</a>
-    </li>
-    <li class="header_links-item">
-      <a class="header_link" href="#lots">посмотреть лоты</a>
-    </li>
-      <li class="header_links-item">
-        <a class="header_link" href="#about">об аукционе</a>
-      </li>
-  </ul>
+  <ul class="menu header_menu">
+          <li class="menu__links-item menu__links-item_no-bullit">
+            <a class="menu__link menu__link_active">главная</a>
+          </li>
+          <li class="menu__links-item">
+            <a class="menu__link" href="#lots">посмотреть лоты</a>
+          </li>
+            <li class="menu__links-item">
+              <a class="menu__link" href="#about">об аукционе</a>
+            </li>
+          </ul>
 </nav>
-<div class="header_logo-container">
+<div class="header__logo-container">
   <a class="header_logo">
-  <img
-  class="header_logo-image"
-  src="./images/logo-black.svg"
-  alt="логотип оно тебе надо">
+    <img class="header_logo-image" src="./images/logo-black.svg" alt="логотип оно тебе надо">
 </a>
 </div>
-<address class="address">
-  <div class="header_address">
+<address class="address header_address">
     <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
     <br>
     <a href=" info@sobaka.ge">info@sobaka.ge</a><br>
     <p> наб. Принсенграхт 263- <br>265, Амстердам</p>
-  </div>
  </address>
 </header>
 
@@ -47,68 +42,69 @@
  
   <section class="cover">
     <div class="overlay"></div>
-      <h1 class="cover_title">
+     <h1 class="cover__title">
+    <span class="aligned_text aligned_text_left">оно</span>
+    <span class="aligned_text aligned_text_center">тебе</span>
+    <span class="aligned_text aligned_text_right">надо</span>
+    </h1>
+      <!--<h1 class="cover__title">
     <span class="aligned_text aligned_text_left">О<span class="letter_spacing-extended">НО</span></span>
     <span class="aligned_text aligned_text_center">ТЕ<span class="letter_spacing-extended">БЕ</span></span>
     <span class="aligned_text aligned_text_right"><span class="letter_spacing-extended">Н</span>АД<span class="no-letter-spacing">О</span></span>
-    </h1>
-     <div class="cover_discription">
+    </h1>-->
+     <div class="cover__discription">
       <p class="discription_text">Аукцион вещей, в которые никто не верил
       </p> 
-      <button class="bet_botton">СДЕЛАТЬ СТАВКУ</botton>
+      <button class="bet_button">СДЕЛАТЬ СТАВКУ</button>
       </div> 
 </section>
 
 <section id="lots" class="lots">
-  <h2 class="lots_heading">ЛОТЫ</h2>
-  <ul class="lots_card-list">
-    <li class="lots_card-list-item">
-      <a class="card_link" href="#0">
-        <article class="card card_type_film">
+  <h2 class="lots__heading">ЛОТЫ</h2>
+  <ul class="lots__card-list">
+    <li class="lots__card-list-item">
+      <a class="card__link" href="#0">
+        <article class="card card__type_film">
         <div class="overlay"></div>
-        <h3 class="card_title">Фильм режиссёра, который бросил киношколу</h3>
-        <p class="card_text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+        <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+        <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
        </article>
       </a>
     </li>
-    <li class="lots_card-list-item">
-      <a class="card_link" href="#0">
-        <article class="card card_type_book">
+    <li class="lots__card-list-item">
+      <a class="card__link" href="#0">
+        <article class="card card__type_book">
           <div class="overlay"></div>
-        <h3 class="card_title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-      <p class="card_text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+        <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+      <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
           </article>
       </a>
     </li>
-     <li class="lots_card-list-item">
-      <a class="card_link" href="#0">
-        <article class="card card_type_picture">
+     <li class="lots__card-list-item">
+      <a class="card__link" href="#0">
+        <article class="card card__type_picture">
           <div class="overlay"></div>
-      <h3 class="card_title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-      <p class="card_text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+      <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+      <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
      </article>
       </a>
     </li>
   </ul>
-  <a class="lots_link" href="#0">посмотреть больше</a>
+  <a class="lots__link" href="#0">посмотреть больше</a>
 </section>
 
-
 <section id="about" class="about">
-  <div class="logo_about-column">
-  <div class="about_logo-container">
-    <a class ="about_logo">
-      <img
-      class="about_logo-image"
-      src="./images/logo-white.svg"
-      alt="логотип оно тебе надо">
+  <div class="about__logo-column">
+  <div class="about__logo-container">
+    <a class ="about__logo">
+      <img class="about__logo-image" src="./images/logo-white.svg" alt="логотип оно тебе надо">
     </a>
   </div>
   </div>
-  <div class="text_about-column">
-  <div class="about_text">
-    <h2 class="about_title">ОБ АУКЦИОНЕ</h2>
-    <div class="about_paragraph first_paragraph">
+  <div class="about__text-column">
+  <div class="about__text">
+    <h2 class="about__title">ОБ АУКЦИОНЕ</h2>
+    <div class="about__paragraph first_paragraph">
       <p>Здесь вы не встретите очередное пафосное собрание невероятно </p>
       <p>дорогого антиквариата. Наши лоты вообще не должны были попасть</p>
       <p>ни на один аукцион. Потому что кому нужен дневник девочки-</p>
@@ -116,7 +112,7 @@
       <p> Кому нужны все эти странные вещи, созданные любителями?
     </p>
   </div>
-      <div class="about_paragraph">
+      <div class="about__paragraph">
         <p>Слишком сложные или, наоборот, слишком простые. Опережающие</p>
          <p>своё время. В пух и прах растерзанные критиками. Непринятые и</p>
           <p>непонятые. Когда-то они казались просто неудачными. Но, несмотря</p>
@@ -131,53 +127,35 @@
 </main>
 
   <footer class="footer">
-      <address class="address">
-        <div class="footer_address">
+      <address class="address footer_address">
           <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
           <br>
           <a href=" info@sobaka.ge">info@sobaka.ge</a><br>
-          <p> наб. Принсенграхт 263- <br>265, Амстердам</p>
-        </div>
+          <p> наб. Принсенграхт 263-265,<br> Амстердам</p>
        </address>
-       <nav>
-        <ul class="footer_links-list footer_menu">
-          <li class="footer_links-item footer_links-item_no-bullit">
-            <a class="footer_link footer_link_active">главная</a>
+       <nav> 
+       <ul class="menu footer_menu">
+          <li class="menu__links-item">
+            <a class="menu__link menu__link_active">главная</a>
           </li>
-          <li class="footer_links-item_no-bullit">
-            <a class="footer_link" href="#lots">посмотреть лоты</a>
+          <li class="menu__links-item">
+            <a class="menu__link" href="#lots">посмотреть лоты</a>
           </li>
-            <li class="footer_links-item_no-bullit">
-              <a class="footer_link" href="#about">об аукционе</a>
+            <li class="menu__links-item">
+              <a class="menu__link" href="#about">об аукционе</a>
             </li>
         </ul>
       </nav>
-      <div class="footer_social">
-       <!-- <div class="footer_social-container">-->
-        <ul class="footer_social-list footer_social">
-          <li class="footer_social-list-item_no_bullit">
-            <a class="footer_social-link" href="https://www.youtube.com/">
-              <img class="footer__social-icon"
-              src="./images/yt.svg"
-              alt="лого ютуб">
-            </a>
-          </li>
-          <li class="footer_social-list-item_no_bullit">
-            <a class="footer_social-link" href="https://vk.com/">
-              <img class="footer_social-icon" 
-              src="./images/vk.svg"
-              alt="лого вк">
-            </a>
-          </li>
-            <li class="footer_social-list-item_no_bullit">
-              <a class="footer_social-link" href="https://pinterest.com/">
-                <img class="footer_social-icon"
-                src="./images/pinterest.svg"
-                alt="лого пинтерест">
-              </a>
-            </li>
-          </ul>
-       <!--</div> -->
+     <div class="footer_social">
+        <a class="footer_social__link" href="https://www.youtube.com/">
+          <img src="./images/yt.svg" alt="лого ютуб">
+        </a>
+        <a class="footer_social__link" href="https://vk.com/">
+          <img src="./images/vk.svg" alt="лого вк">
+        </a>
+        <a class="footer_social__link" href="https://pinterest.com/">
+          <img src="./images/pinterest.svg" alt="лого пинтерест">
+        </a>
       </div>
   </footer>
   </body>
