--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
 <nav>
   <ul class="menu header_menu">
-          <li class="menu__links-item menu__links-item_no-bullit">
+          <li class="menu__links-item_no-bullit">
             <a class="menu__link menu__link_active">главная</a>
           </li>
           <li class="menu__links-item">
@@ -42,16 +42,11 @@
  
   <section class="cover">
     <div class="overlay"></div>
-     <h1 class="cover__title">
-    <span class="aligned_text aligned_text_left">оно</span>
-    <span class="aligned_text aligned_text_center">тебе</span>
-    <span class="aligned_text aligned_text_right">надо</span>
-    </h1>
-      <!--<h1 class="cover__title">
+      <h1 class="cover__title">
     <span class="aligned_text aligned_text_left">О<span class="letter_spacing-extended">НО</span></span>
     <span class="aligned_text aligned_text_center">ТЕ<span class="letter_spacing-extended">БЕ</span></span>
-    <span class="aligned_text aligned_text_right"><span class="letter_spacing-extended">Н</span>АД<span class="no-letter-spacing">О</span></span>
-    </h1>-->
+    <span class="aligned_text aligned_text_right"><span class="letter_spacing-extended">Н</span>АД<span class="no-letter-spacing">о<span></span>
+    </h1>
      <div class="cover__discription">
       <p class="discription_text">Аукцион вещей, в которые никто не верил
       </p> 
@@ -64,7 +59,7 @@
   <ul class="lots__card-list">
     <li class="lots__card-list-item">
       <a class="card__link" href="#0">
-        <article class="card card__type_film">
+        <article class="card card__lot_film">
         <div class="overlay"></div>
         <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
         <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
@@ -73,7 +68,7 @@
     </li>
     <li class="lots__card-list-item">
       <a class="card__link" href="#0">
-        <article class="card card__type_book">
+        <article class="card card__lot_book">
           <div class="overlay"></div>
         <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
       <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
@@ -82,7 +77,7 @@
     </li>
      <li class="lots__card-list-item">
       <a class="card__link" href="#0">
-        <article class="card card__type_picture">
+        <article class="card card__lot_picture">
           <div class="overlay"></div>
       <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
       <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
