--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="styles/global.css">
-   <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="fonts/fonts.css" >
+    <link rel="stylesheet" href="styles/style.css">
   </head>
 
   <body>
@@ -31,9 +31,9 @@
 </a>
 </div>
 <address class="address header_address">
-    <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+    <a href="tel:+99995555555">+9 999 555 5555</a>
     <br>
-    <a href=" info@sobaka.ge">info@sobaka.ge</a><br>
+    <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
     <p> наб. Принсенграхт 263- <br>265, Амстердам</p>
  </address>
 </header>
@@ -45,7 +45,7 @@
       <h1 class="cover__title">
     <span class="aligned_text aligned_text_left">О<span class="letter_spacing-extended">НО</span></span>
     <span class="aligned_text aligned_text_center">ТЕ<span class="letter_spacing-extended">БЕ</span></span>
-    <span class="aligned_text aligned_text_right"><span class="letter_spacing-extended">Н</span>АД<span class="no-letter-spacing">о<span></span>
+    <span class="aligned_text aligned_text_right"><span class="letter_spacing-extended">Н</span>АД<span class="no-letter-spacing">о</span></span>
     </h1>
      <div class="cover__discription">
       <p class="discription_text">Аукцион вещей, в которые никто не верил
@@ -123,9 +123,9 @@
 
   <footer class="footer">
       <address class="address footer_address">
-          <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a href="tel:+99995555555">+9 999 555 5555</a>
           <br>
-          <a href=" info@sobaka.ge">info@sobaka.ge</a><br>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
           <p> наб. Принсенграхт 263-265,<br> Амстердам</p>
        </address>
        <nav> 
